paragrafo lista e tabella

--- a/index.html
+++ b/index.html
@@ -38,7 +38,52 @@
         </section>
         <!-- /Sezione foto con didascalia -->
 
-        
+        <!-- Sezione paragrafo, elenco, tabella -->
+        <section>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur iste impedit voluptatem distinctio! Nulla velit culpa a suscipit neque, possimus, cumque, itaque veniam quis hic voluptatem deserunt aperiam? Mollitia, doloribus.
+               <mark>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam dolores, laudantium sed fuga pariatur enim recusandae vel natus. Eum obcaecati odio accusamus non facilis cumque eveniet minima, incidunt recusandae dolorum.</mark> 
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid eum perferendis repudiandae aperiam ipsa perspiciatis autem velit minima. Hic esse quae eos tempore, provident veritatis at velit ea. Perferendis, adipisci!
+            </p>
+            <ul>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit cumque recusandae impedit doloribus doloremque, dolore dolor, eos iste repellat expedita adipisci vero eveniet tempora hic suscipit in ratione atque quidem.</li>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia natus fugiat, eligendi nemo corporis excepturi nostrum exercitationem, labore quod quibusdam architecto fugit! Deserunt placeat debitis eos inventore explicabo. Sed, ratione?</li>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit iste officia odit quos debitis natus, neque repellat modi expedita facere rem suscipit accusantium aperiam ut deserunt dolores quod porro vel.</li>
+            </ul>
+
+            <table>
+                <thead>
+                    <tr>
+                        <th class="table-len">Lorem ipsum dolor</th>
+                        <th class="table-len">Lorem ipsum dolor</th>
+                        <th>Lorem ipsum dolor</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr class="table-even">
+                        <td>Lorem ipsum</td>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio minima commodi iste nemo neque quam amet incidunt culpa corporis voluptatibus magni perspiciatis, at similique quod obcaecati saepe. Delectus, optio voluptates.</td>
+                    </tr>
+                    <tr>
+                        <td>Lorem ipsum</td>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio minima commodi iste nemo neque quam amet incidunt culpa corporis voluptatibus magni perspiciatis, at similique quod obcaecati saepe. Delectus, optio voluptates.</td>
+                    </tr>
+                    <tr class="table-even">
+                        <td>Lorem ipsum</td>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio minima commodi iste nemo neque quam amet incidunt culpa corporis voluptatibus magni perspiciatis, at similique quod obcaecati saepe. Delectus, optio voluptates.</td>
+                    </tr>
+                </tbody>
+            </table>
+
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus et consectetur vitae vero unde. Id repellat cumque ea saepe, architecto animi fuga accusamus optio facere voluptatibus minus inventore, assumenda atque.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates veniam nam aliquam corrupti consectetur dolore consequuntur! Rem quae ullam natus distinctio, ducimus fuga vitae sit vel beatae. Placeat, odio quis.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. <mark>Molestias nostrum maxime nemo harum, molestiae nihil a, tempora veritatis ullam atque asperiores sunt cum sed blanditiis?</mark> Vero quasi molestias id. Fuga?
+            </p>
+        </section>
+        <!-- /Sezione paragrafo, elenco e tabella -->
         
     </article>
     <!-- /Sezione principale -->
