--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- /header con immagine -->
 
     <!-- sezione principale -->
-    <article>
+    <article class="border">
         <!-- Sezione del titolo -->
         <section>
             <h1 id="titolo">Internet deve essere al servizio del "Bene pubblico" : il manifesto di Tim Berners-Lee</h1>
@@ -29,8 +29,8 @@
 
         <!-- Sezione foto con didascalia -->
         <section class="tim">
-            <img src="img/tim-1.jpg" alt="Tim Berners-Lee 1">
-            <img src="img/tim-2.jpg" alt="Tim Berners-Lee 2">
+            <img class="photo-tim" src="img/tim-1.jpg" alt="Tim Berners-Lee 1">
+            <img class="photo-tim" src="img/tim-2.jpg" alt="Tim Berners-Lee 2">
             <div>
                 1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen <br>
                 2nd Photo: Wikimedia, by Paul Clarke 
@@ -87,7 +87,15 @@
         
     </article>
     <!-- /Sezione principale -->
-    <footer></footer>
+
+    <!-- Footer con foto -->
+    <footer class="border">
+        <h4>Potrebbero Interessarti</h4>
+        <div class="dimensioni" id="monitor"></div>
+        <div class="dimensioni" id="graph"></div>
+
+    </footer>
+    <!-- /Footer con foto -->
     
 </body>
 </html>
