sostituzione section con div

--- a/index.html
+++ b/index.html
@@ -28,18 +28,18 @@
         <!-- /Sezione del titolo -->
 
         <!-- Sezione foto con didascalia -->
-        <section class="tim">
+        <div class="tim">
             <img class="photo-tim" src="img/tim-1.jpg" alt="Tim Berners-Lee 1">
             <img class="photo-tim" src="img/tim-2.jpg" alt="Tim Berners-Lee 2">
             <div>
                 1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen <br>
                 2nd Photo: Wikimedia, by Paul Clarke 
             </div>
-        </section>
+        </div>
         <!-- /Sezione foto con didascalia -->
 
         <!-- Sezione paragrafo, elenco, tabella -->
-        <section>
+        <div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur iste impedit voluptatem distinctio! Nulla velit culpa a suscipit neque, possimus, cumque, itaque veniam quis hic voluptatem deserunt aperiam? Mollitia, doloribus.
                <mark>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam dolores, laudantium sed fuga pariatur enim recusandae vel natus. Eum obcaecati odio accusamus non facilis cumque eveniet minima, incidunt recusandae dolorum.</mark> 
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid eum perferendis repudiandae aperiam ipsa perspiciatis autem velit minima. Hic esse quae eos tempore, provident veritatis at velit ea. Perferendis, adipisci!
@@ -82,7 +82,7 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates veniam nam aliquam corrupti consectetur dolore consequuntur! Rem quae ullam natus distinctio, ducimus fuga vitae sit vel beatae. Placeat, odio quis.
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. <mark>Molestias nostrum maxime nemo harum, molestiae nihil a, tempora veritatis ullam atque asperiores sunt cum sed blanditiis?</mark> Vero quasi molestias id. Fuga?
             </p>
-        </section>
+        </div>
         <!-- /Sezione paragrafo, elenco e tabella -->
         
     </article>
